Adjust fixed/z-index of settings

--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -1,5 +1,5 @@
 .app-settings {
-  position: absolute;
+  position: fixed;
   right: 10rem;
   top: 1.5rem;
   /*border: 2px solid red;*/
@@ -9,6 +9,7 @@
   justify-content: center;
   align-content: center;
   align-items: center;
+  z-index: 1;
 }
 
 .app-settings-icon {
